Fixing windowHeight bug on IE

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,8 +14,7 @@ html,body
 
 #page-container
 {
-/*	padding-top:10px;
-*/	width: 950px;
+	width: 950px;
 	margin: auto;
 }
 
